--- a/css/stylesregistro.css
+++ b/css/stylesregistro.css
@@ -6,62 +6,6 @@ form{
 padding-left: 20px;
 }
 
-.elquehayquearreglar{
-  padding-left: 15px;
-}
-label{
-  font-size: 20px;
-}
-footer nav{
-  4rem 2rem;
-}
-.nav-izq{
-  float: left;
-  width: 60%;
-}
-nav-izq-abajo{
-  float: left;
-  width: 55%;
-}
-
-.nav-der{
-  float: right;
-  width: 35%;
-}
-footer{
-  margin: 0 auto;
-  background-color: #494B4B;
-  overflow: hidden;
-  color: white;
-  padding: 10px;
-}
-
-footer nav ul li{
-  list-style-type: none;
-  display: inline-block;
-  box-sizing: border-box;
-  float: left;
-  padding: 10px;
-}
-i {
-  font-size: 20px;
-  text-decoration: none;
-  text-transform: none;
-  color: white;
-}
-
-nav.nav-izq ul li a, nav.nav-izq-abajo ul li a {
-  text-decoration: none;
-  text-transform: none;
-  color: white;
-}
-nav.navegacion-abajo{
+div{
   width: 100%;
-  overflow: hidden;
-  box-sizing: border-box;
 }
-
-nav.nav-der-abajo ul li a{
-  display: inline;
-  width: 30%;
-float: center;}
