--- a/css/stylesregistro.css
+++ b/css/stylesregistro.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(../img/16245.jpg);
+  background-image: url(../img/pexels-photo-413195.jpeg);
   background-size: cover;
 }
 form{
