--- a/css/almohadones.css
+++ b/css/almohadones.css
@@ -1,9 +1,11 @@
 body{
-  background-image: url(../img/16245.jpg);
+  background-image: url(../img/pexels-photo-413195.jpeg);
   background-size: cover;
 }
 div.jumbotron{
-  background-image: url(../img/textile-2918844_1920.jpg);
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 section{.
   width: 100%;
