--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
 body{
-  background-image: url(../img/16245.jpg);
+  background-image: url(../img/pexels-photo-413195.jpeg);
   background-size: cover;
 }
 
 div.jumbotron{
-  background-image: url(../img/madera.jpg);
-  background-size: contain;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 section{
   width: 100%;
