--- a/css/stylesingreso.css
+++ b/css/stylesingreso.css
@@ -1,4 +1,4 @@
 body{
-  background-image: url(../img/16245.jpg);
+  background-image: url(../img/pexels-photo-413195.jpeg);
   background-size: cover;
 }
