--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body{
-  background-image: url(../img/pexels-photo-413195.jpeg);
+  background-image: url(../img/162450.jpg);
   background-size: cover;
 }
-
 div.jumbotron{
   background-color: black;
   color: white;
